Создал перебор всех файлов и чтение в мапу